--- a/messaging_app/Dockerfile
+++ b/messaging_app/Dockerfile
@@ -11,7 +11,9 @@ WORKDIR /app
 # Install system dependencies
 RUN apt-get update \
     && apt-get install -y --no-install-recommends \
-        postgresql-client \
+        default-libmysqlclient-dev \
+        build-essential \
+        pkg-config \
     && rm -rf /var/lib/apt/lists/*
 
 # Install Python dependencies
