--- a/messaging_app/.env.example
+++ b/messaging_app/.env.example
@@ -2,3 +2,8 @@ SECRET_KEY=your_secret_key
 DEBUG=your_debug_value
 ALLOWED_HOSTS=allowed_hosts
 DATABASE_URL=your_db_url
+
+# Jenkins Environment Variables
+GITHUB_CREDENTIALS_ID=your-github-credentials-id
+DOCKERHUB_CREDENTIALS_ID=your-dockerhub-credentials-id
+DOCKERHUB_USERNAME=your-dockerhub-username
