--- a/messaging_app/.env.example
+++ b/messaging_app/.env.example
@@ -1,9 +1,16 @@
-SECRET_KEY=your_secret_key
-DEBUG=your_debug_value
-ALLOWED_HOSTS=allowed_hosts
-DATABASE_URL=your_db_url
+# Django Core Settings
+SECRET_KEY=
+DEBUG=
+ALLOWED_HOSTS=
 
-# Jenkins Environment Variables
-GITHUB_CREDENTIALS_ID=your-github-credentials-id
-DOCKERHUB_CREDENTIALS_ID=your-dockerhub-credentials-id
-DOCKERHUB_USERNAME=your-dockerhub-username
+# Database Configuration for Local Development
+DB_NAME=
+DB_USER=
+DB_PASSWORD=
+DB_HOST=localhost
+DB_PORT=3306
+
+# Jenkins Environment Variables (for reference)
+GITH_CREDENTIALS_ID=
+DOCKERHUB_CREDENTIALS_ID=
+DOCKERHUB_USERNAME=
