--- a/messaging_app/messaging_app/.github/workflows/ci.yml
+++ b/messaging_app/messaging_app/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Django CI Tests
+name: Django CI, Lint & Coverage
 
 on:
   push:
@@ -14,7 +14,6 @@ jobs:
       mysql:
         image: mysql:8.0
         env:
-          # Use secrets for sensitive data, with fallbacks for local testing if needed
           MYSQL_ROOT_PASSWORD: ${{ secrets.DB_PASSWORD }}
           MYSQL_DATABASE: ${{ secrets.DB_NAME }}
           MYSQL_USER: ${{ secrets.DB_USER }}
@@ -39,11 +38,16 @@ jobs:
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r messaging_app/requirements.txt
+          # Install flake8 for linting and pytest-cov for coverage
+          pip install -r messaging_app/requirements.txt flake8 pytest-cov
 
-      - name: Run Tests
+      - name: Lint with flake8
+        run: |
+          # Run flake8 to check for code quality. The build will fail if errors are found.
+          flake8 messaging_app/
+
+      - name: Run Tests and Generate Coverage
         env:
-          # Use secrets for all sensitive values
           SECRET_KEY: ${{ secrets.SECRET_KEY }}
           DEBUG: ${{ secrets.DEBUG }}
           ALLOWED_HOSTS: ${{ secrets.ALLOWED_HOSTS }}
@@ -53,4 +57,13 @@ jobs:
           DB_HOST: ${{ secrets.DB_HOST }}
           DB_PORT: ${{ secrets.DB_PORT }}
         run: |
-          pytest messaging_app/
+          # Run pytest, creating a coverage report in XML format
+          pytest --cov=messaging_app --cov-report=xml messaging_app/
+
+      - name: Upload Coverage Report
+        uses: actions/upload-artifact@v3
+        with:
+          # The name of the artifact to be uploaded
+          name: coverage-report
+          # The path to the file to upload
+          path: coverage.xml
